--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -1280,11 +1280,15 @@
                                                                     <rect key="frame" x="0.0" y="0.0" width="101" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
-                                                                        <colorWell bordered="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qPn-Uw-Rrj">
+                                                                        <colorWell translatesAutoresizingMaskIntoConstraints="NO" id="qPn-Uw-Rrj" customClass="ColorWell">
                                                                             <rect key="frame" x="0.0" y="0.0" width="101" height="17"/>
                                                                             <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <connections>
-                                                                                <binding destination="5a0-VJ-GML" name="value" keyPath="objectValue.value" id="GvM-6o-mEM"/>
+                                                                                <binding destination="5a0-VJ-GML" name="value" keyPath="objectValue.value" id="oTJ-8g-nSl">
+                                                                                    <dictionary key="options">
+                                                                                        <string key="NSValueTransformerName">ColorTransformer</string>
+                                                                                    </dictionary>
+                                                                                </binding>
                                                                             </connections>
                                                                         </colorWell>
                                                                     </subviews>
