--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -1383,9 +1383,6 @@
                         </subviews>
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="85" id="TDL-W2-UGf"/>
-                    </constraints>
                     <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="COj-Za-awC">
                         <rect key="frame" x="1" y="32" width="46" height="15"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1422,12 +1419,13 @@
                 <constraint firstItem="0zv-gw-fpv" firstAttribute="leading" secondItem="pGv-Ji-A5t" secondAttribute="leading" id="4gb-do-oyK"/>
                 <constraint firstAttribute="trailing" secondItem="0zv-gw-fpv" secondAttribute="trailing" id="D8d-ga-1aR"/>
                 <constraint firstItem="2NA-cf-M6m" firstAttribute="leading" secondItem="x8u-Dq-Tet" secondAttribute="trailing" constant="4" id="Dxs-oW-jox"/>
-                <constraint firstItem="x8u-Dq-Tet" firstAttribute="leading" secondItem="0zv-gw-fpv" secondAttribute="leading" constant="2" id="MT0-V7-Tg8"/>
                 <constraint firstItem="2NA-cf-M6m" firstAttribute="height" secondItem="x8u-Dq-Tet" secondAttribute="height" id="klB-5W-klz"/>
-                <constraint firstItem="0zv-gw-fpv" firstAttribute="bottom" secondItem="x8u-Dq-Tet" secondAttribute="bottom" constant="2" id="nMg-Yb-NK9"/>
+                <constraint firstAttribute="bottom" secondItem="x8u-Dq-Tet" secondAttribute="bottom" constant="2" id="lr0-ER-kCl"/>
+                <constraint firstAttribute="bottom" secondItem="0zv-gw-fpv" secondAttribute="bottom" id="tAj-hN-wTn"/>
                 <constraint firstItem="0zv-gw-fpv" firstAttribute="top" secondItem="pGv-Ji-A5t" secondAttribute="top" id="ti3-GC-LQr"/>
                 <constraint firstItem="2NA-cf-M6m" firstAttribute="width" secondItem="x8u-Dq-Tet" secondAttribute="width" id="uZM-NK-5GF"/>
                 <constraint firstItem="2NA-cf-M6m" firstAttribute="centerY" secondItem="x8u-Dq-Tet" secondAttribute="centerY" id="ueh-qV-n0u"/>
+                <constraint firstItem="x8u-Dq-Tet" firstAttribute="leading" secondItem="pGv-Ji-A5t" secondAttribute="leading" constant="2" id="y3o-H4-GnF"/>
             </constraints>
             <userDefinedRuntimeAttributes>
                 <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
