--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -1435,11 +1435,11 @@
             <point key="canvasLocation" x="784" y="178.5"/>
         </tableCellView>
         <tableCellView identifier="header" id="xvS-hY-Bup" userLabel="header">
-            <rect key="frame" x="0.0" y="0.0" width="78" height="20"/>
+            <rect key="frame" x="0.0" y="0.0" width="78" height="18"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="DV1-4P-XVd" userLabel="Header">
-                    <rect key="frame" x="3" y="3" width="77" height="14"/>
+                    <rect key="frame" x="3" y="2" width="77" height="14"/>
                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Header" id="d8G-pr-wp7" userLabel="Header">
                         <font key="font" metaFont="smallSystemBold"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -1451,7 +1451,7 @@
                 </textField>
             </subviews>
             <constraints>
-                <constraint firstAttribute="top" secondItem="DV1-4P-XVd" secondAttribute="bottom" constant="-17" id="CLb-tA-9x3"/>
+                <constraint firstItem="DV1-4P-XVd" firstAttribute="bottom" secondItem="xvS-hY-Bup" secondAttribute="top" constant="16" id="CLb-tA-9x3"/>
                 <constraint firstItem="DV1-4P-XVd" firstAttribute="leading" secondItem="xvS-hY-Bup" secondAttribute="leading" constant="5" id="QCw-mp-T7O"/>
                 <constraint firstAttribute="trailing" secondItem="DV1-4P-XVd" secondAttribute="trailing" id="vvA-ho-lyO"/>
             </constraints>
@@ -1461,11 +1461,11 @@
             <point key="canvasLocation" x="784" y="284"/>
         </tableCellView>
         <tableCellView identifier="expandable" id="O7j-xp-Rmq" userLabel="expandable">
-            <rect key="frame" x="0.0" y="0.0" width="78" height="20"/>
+            <rect key="frame" x="0.0" y="0.0" width="78" height="18"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="9Xf-FJ-Mf8">
-                    <rect key="frame" x="18" y="3" width="56" height="14"/>
+                    <rect key="frame" x="18" y="2" width="56" height="14"/>
                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="expandable" id="zMP-LX-YdA">
                         <font key="font" metaFont="smallSystemBold"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -1482,8 +1482,8 @@
                 </textField>
             </subviews>
             <constraints>
-                <constraint firstAttribute="top" secondItem="9Xf-FJ-Mf8" secondAttribute="bottom" constant="-17" id="7rc-ZD-uhm"/>
-                <constraint firstAttribute="trailing" secondItem="9Xf-FJ-Mf8" secondAttribute="trailing" constant="6" id="Tea-GE-CXI"/>
+                <constraint firstItem="9Xf-FJ-Mf8" firstAttribute="bottom" secondItem="O7j-xp-Rmq" secondAttribute="top" constant="16" id="7rc-ZD-uhm"/>
+                <constraint firstItem="9Xf-FJ-Mf8" firstAttribute="trailing" secondItem="O7j-xp-Rmq" secondAttribute="trailing" constant="-6" id="Tea-GE-CXI"/>
                 <constraint firstItem="9Xf-FJ-Mf8" firstAttribute="leading" secondItem="O7j-xp-Rmq" secondAttribute="leading" constant="20" id="l3U-zM-Xb2"/>
             </constraints>
             <connections>
