--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -1016,7 +1016,7 @@
                                                                     <menuItem title="Boolean" id="WN5-3m-WF0" userLabel="Boolean"/>
                                                                     <menuItem title="Number" tag="1" id="YhE-cX-V4x"/>
                                                                     <menuItem title="String" tag="2" id="TU3-go-d8f"/>
-                                                                    <menuItem title="Localized String" state="on" tag="3" hidden="YES" enabled="NO" id="aFU-5b-ARO">
+                                                                    <menuItem title="Localized String" tag="3" hidden="YES" enabled="NO" id="aFU-5b-ARO">
                                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                                     </menuItem>
                                                                     <menuItem title="Point" tag="4" id="0rW-TN-boT">
